<resources>
    <string name="app_name">library_login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="registe_walk">逛一逛</string>
    <string name="phone">手机号</string>
    <string name="verification">验证码</string>
    <string name="setpassword">设置密码</string>
    <string name="hint_setpassword">长度不少于6位,包含字母或数字</string>
    <string name="invitation">邀请码</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_login">手机登录：</string>
    <string name="password_login">密码登录：</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="register_first">没有账号，先注册</string>
    <string name="unit_name">单位名称</string>
    <string name="contact">联系人</string>
    <string name="legal_person">法人</string>
    <string name="contact_phone">联系电话</string>
    <string name="address">地址</string>
    <string name="registered_capital">注册资金</string>
    <string name="serial_number">编号</string>
    <string name="upload_documents">证件上传</string>
    <string name="business_license">营业执照</string>
    <string name="submit_audit">提交审核</string>
    <string name="submit_wait">提交审核中，将在24小时内反馈，请耐心等待</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="reset_password">密码重置</string>
    <string name="new_password">新密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="finance">财务</string>
    <string name="home">首页</string>
    <string name="statistics">统计</string>
    <string name="order">订单</string>
    <string name="user">我的</string>
    <string name="input_password">请输入密码</string>
    <string name="input_account">请输入手机号</string>
    <string name="register_login">登录及同意</string>
    <string name="dada_login">(萝卜宝运输协议)</string>
    <string name="input_unit">请输入单位名称</string>
    <string name="input_contact">请输入联系人</string>
    <string name="input_legal_person">请输入公司法人</string>
    <string name="input_contact_phone">请输入联系电话</string>
    <string name="input_address">请输入公司地址</string>
    <string name="input_registered_capital">请输入注册资金</string>
    <string name="retrieve_password">找回密码</string>
    <string name="input_phone">请输入注册手机号</string>
    <string name="orders_issued">订单发布</string>
    <string name="orders_car">在运车辆</string>
    <string name="now_order">当前订单</string>
    <string name="start_address">出发地</string>
    <string name="end_address">目的地</string>
    <string name="route">距离</string>
    <string name="order_number">订单编号</string>
    <string name="order_name">发布单位</string>
    <string name="order_start_time">到站时间</string>
    <string name="total_amount">总货物量</string>
    <string name="vehicle_type">车辆类型</string>
    <string name="concrete_car">砼车</string>
    <string name="pump_truck">泵车</string>
    <string name="price">单价</string>
    <string name="order_price">订单单价</string>
    <string name="fang_18">18方</string>
    <string name="fang_16">16方</string>
    <string name="fang_20">20方</string>
    <string name="note">备注</string>
    <string name="user_info">个人信息</string>
    <string name="change_password">修改密码</string>
    <string name="user_manager">员工管理</string>
    <string name="setting">我的功能</string>
    <string name="messege_m">资讯管理</string>
    <string name="message_management">消息管理</string>
    <string name="order_detail">订单详情</string>
    <string name="release_order">发布订单</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="license_plate_number">车牌号</string>
    <string name="driver_name">司机</string>
    <string name="order_totel">接单总量</string>
    <string name="belongs_to">所属</string>
    <string name="current_load">当前装载</string>
    <string name="unit_price">单价</string>
    <string name="loading_evidence">装货完成凭据</string>
    <string name="unloading_evidence">卸货完成凭据</string>
    <string name="route_selete">订单距离选择</string>
    <string name="modify_order">修改订单</string>
    <string name="reject">驳回</string>
    <string name="unload_accomplish">卸货完成</string>
    <string name="bang_1">汽车泵37米</string>
    <string name="bang_2">汽车泵42-53米</string>
    <string name="bang_3">汽车泵56-62米</string>
    <string name="bang_4">普通固定泵</string>
    <string name="bang_5">高压固定泵</string>
    <string name="beng_car">汽车泵</string>
    <string name="beng_gu">固定泵</string>
    <string name="putong">普通</string>
    <string name="gaoya">高压</string>
    <string name="beng_3">56-62米</string>
    <string name="beng_2">42-53米</string>
    <string name="beng_1">37米</string>
    <string name="update_head">头像</string>
    <string name="user_name">姓名</string>
    <string name="user_phone">手机号</string>
    <string name="user_age">年龄</string>
    <string name="user_address">地址</string>
    <string name="year">岁</string>
    <string name="old_password">旧密码</string>
    <string name="sure_password">确认新密码</string>
    <string name="sure_change">确认修改</string>
    <string name="add_manager">添加</string>
    <string name="user_setting">我的设置</string>
    <string name="message_notice">消息通知</string>
    <string name="submit_settlement">确认核算</string>
    <string name="confirm_the_settlement">确认结算</string>
    <string name="order_information">订单信息</string>
    <string name="user_position">职务</string>
    <string name="historical_record">历史纪录</string>
    <string name="order_setting">订单设置</string>
    <string name="out_login">注销</string>
    <string name="mixing_plant_maintenance">搅拌站维护</string>


    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year1">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="about_app">关于</string>
    <string name="accept_list">接单列表</string>
    <string name="order_pic">订单图片</string>
    <string name="price_setting">单价设置</string>
    <string name="update_logo">上传logo</string>
    <string name="logistics_maintenance">物流公司维护</string>
    <string name="driver_manager">司机管理</string>
    <string name="car_manager">车辆管理</string>
    <string name="update_car_pic">上传车辆照片</string>
    <string name="car_no">车牌号码</string>
    <string name="driver">司机</string>
    <string name="car_brand">车辆品牌</string>
    <string name="purchase_time">购置时间</string>
    <string name="car_type">车辆型号</string>
    <string name="travlled_distance">行驶里程</string>
    <string name="car_load">核定载重</string>
    <string name="car_time">保险到期时间</string>
    <string name="add_car">添加车辆</string>
    <string name="sure_add">确认添加</string>
    <string name="add_driver">添加司机</string>
    <string name="update_driver_pic">上传头像</string>
    <string name="identity_card">身份证</string>
    <string name="driving_years">驾龄</string>
    <string name="drivering_age">年龄</string>
    <string name="driver_address">地址</string>
    <string name="confirm_submit">确认提交</string>
    <string name="select_car">选择车辆</string>
    <string name="submit_add">确认添加</string>
    <string name="select_driver">选择司机</string>
    <string name="manay_order">更多订单</string>
    <string name="accet_order">接单列表</string>
    <string name="apply_settlement">申请核算</string>
    <string name="end_time">截止时间</string>
    <string name="job_detail">岗位详情</string>
    <string name="job_name">岗位名称</string>
    <string name="salary_range">薪资范围</string>
    <string name="working_place">工作地点</string>
    <string name="qualifications">任职资格</string>
    <string name="welfare_treatment">福利待遇</string>
    <string name="post_requirements">岗位要求</string>
    <string name="work_units">用人单位</string>
    <string name="work_name">单位名称</string>
    <string name="work_address">单位地址</string>
    <string name="work_contact">联系人</string>
    <string name="job_end_time">招聘截至日期</string>
    <string name="release_job">确认发布</string>
    <string name="people_resume">个人简历</string>
    <string name="user_gender">性别</string>
    <string name="native_place">籍贯</string>
    <string name="level_of_education">文化程度</string>
    <string name="marriage">婚姻</string>
    <string name="working_state">工作状态</string>
    <string name="work_experience">工作经历</string>
    <string name="political_landscape">政治面貌</string>
    <string name="religious_beliefs">宗教信仰</string>
    <string name="working_years">工作年限</string>
    <string name="expected_salary">期望薪资</string>
    <string name="release_commit">确定提交</string>
    <string name="resume_list">简历列表</string>

    <string name="publish_job">发布招聘</string>
    <string name="publish_job_detail">招聘详情</string>
    <string name="resume_center">简历中心</string>
    <string name="contract_phone">联系方式</string>
    <string name="resume_address">家庭住址</string>
</resources>
