<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.library_main.MainActivity">
    <com.example.library_main.NoScrollViewPager

        android:id="@+id/main_vp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </com.example.library_main.NoScrollViewPager>
    <RadioGroup
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">
        <RadioButton

            android:drawableTop="@drawable/selector_main_order"
            android:id="@+id/main_rb_order"
            style="@style/main_rg"
            android:text="@string/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton

            android:drawableTop="@drawable/selector_main_finance"
            android:id="@+id/main_rb_finance"
            style="@style/main_rg"
            android:text="@string/finance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:drawableTop="@drawable/selector_main_home"
            android:checked="true"
            android:id="@+id/main_rb_home"
            style="@style/main_rg"
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:drawableTop="@drawable/selector_main_statistics"
            android:id="@+id/main_rb_statistics"
            style="@style/main_rg"
            android:text="@string/statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton

            android:drawableTop="@drawable/selector_main_user"
            android:id="@+id/main_rb_user"
            style="@style/main_rg"
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>
