<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffe06e38">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_18"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/back_tv"
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_11"
            android:layout_toEndOf="@+id/register_back"
            android:layout_toRightOf="@+id/register_back"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/change_password"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/user_phone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_phone"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/old_password"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_oldpassword"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/new_password"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_newpassword"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/sure_password"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_sure_newpassword"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <TextView
        android:gravity="center"
        android:textColor="@color/FFFFFF"
        android:text="@string/sure_change"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_250"
        android:id="@+id/sure_tv"
        android:background="@drawable/shape_login"
        android:layout_width="@dimen/dp_302"
        android:layout_height="@dimen/dp_42" />
</LinearLayout>