<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <ImageView
            android:id="@+id/back_iv"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView

            android:text="@string/order_detail"
            android:id="@+id/search_et"
            android:textSize="@dimen/sp_14"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.amap.api.maps.MapView
            android:id="@+id/order_detail_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.amap.api.maps.MapView>
        <android.support.v4.widget.NestedScrollView
            android:background="@color/FFFFFF"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_351">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/license_plate_number"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/transport_carnumber"
                        android:text="1224511054"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/driver_name"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/driver_name"
                        android:text="1224511054"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/phone"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/driver_phone"
                        android:text="1224511054"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <LinearLayout
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/order_totel"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/accept_total"
                        android:text="1224511054"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/belongs_to"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/driver_attribution"
                        android:text="1224511054"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/current_load"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/now_loading"
                        android:text="1224511054"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44">
                    <TextView
                        android:text="@string/unit_price"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/unit_price"
                        android:text="100元（单位 方/公里）"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@color/_E0E0E0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">

                </View>
                <TextView
                    android:layout_marginTop="@dimen/dp_13"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/loading_evidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/loading_pic"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_width="@dimen/dp_168"
                    android:layout_height="@dimen/dp_88" />
                <TextView
                    android:layout_marginTop="@dimen/dp_26"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:text="@string/unloading_evidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/unload_pic"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_width="@dimen/dp_168"
                    android:layout_height="@dimen/dp_88" />
                <LinearLayout
                    android:id="@+id/bottom_ll"
                    android:layout_marginBottom="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_55"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/reject_tv"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_42"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_login_hollow"
                        android:gravity="center"
                        android:text="@string/reject"
                        android:textColor="@color/_333333" />
                    <TextView
                        android:id="@+id/unload_accomplish_tv"
                        android:layout_marginLeft="@dimen/dp_41"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_42"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_login"
                        android:gravity="center"
                        android:text="@string/unload_accomplish"
                        android:textColor="@color/FFFFFF" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>
</LinearLayout>